--- a/requirements.txt
+++ b/requirements.txt
@@ -145,7 +145,7 @@ jedi @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jedi_169948
 jellyfish @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jellyfish_1699558116601/work
 Jinja2 @ file:///C:/b/abs_92fccttino/croot/jinja2_1716993447201/work
 jmespath @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jmespath_1701807551985/work
-joblib==1.3.2 @ file:///C:/b/abs_f4b98l6lgk/croot/joblib_1718217224240/work
+joblib==1.3.2
 json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
 jsonpatch @ file:///C:/b/abs_4fdm88t7zi/croot/jsonpatch_1714483974578/work
 jsonpointer==2.1
